# lappieAGI

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
lappie/: agent.py  display.py  llm.py  models.py  prompts.py  tools.py  tree.py  util.py
tests/: conftest.py  test_agent.py  test_display.py  test_tree.py
